# super-mario-ai

./: .gitignore  README.md  action_list.txt  contours.py  contours_algo.py  contours_detector.py  detectors.py  image.py  main.ipynb  main.py  mario_actions.py  mario_states.py  match_template_algo.py  match_template_hole_test.py  mcts.py  mcts2.py  obs_resize.py  ppo.py  pyproject.toml  q_learning.py  q_learning_obs.py  q_obs.py  q_state.py  rule_based_ai.py  rule_based_ai_faster.py  run.py  states.py  test.py  test_contours.py  utils.py
.github/workflows/: create-branch-on-issue-assignment.yml  issue-autolink.yml  main.yml
Image_Detection/: detectors.py  match_template_algo.py
Monte_Carlo/: action_list.txt  mario_states.py  mcts.py  run.py
PPO/: ppo.py  ppo_cont.py  run.py
PPO/logs/PPO_1/: events.out.tfevents.1695973453.Khanh-MacBook-Air.local.50799.0
PPO/logs/PPO_10/: events.out.tfevents.1696076649.Khanh-MacBook-Air.local.73148.0
PPO/logs/PPO_11/: events.out.tfevents.1696076676.Khanh-MacBook-Air.local.73218.0
PPO/logs/PPO_12/: events.out.tfevents.1696077152.Khanh-MacBook-Air.local.73750.0
PPO/logs/PPO_13/: events.out.tfevents.1696139654.Khanh-MacBook-Air.local.79768.0
PPO/logs/PPO_14/: events.out.tfevents.1696139682.Khanh-MacBook-Air.local.79800.0
PPO/logs/PPO_15/: events.out.tfevents.1696155842.Khanh-MacBook-Air.local.14158.0
PPO/train/: model_statistics
Q_Learning/: q_obs.py  q_state.py  run.py
Q_Learning/debug/: cProfiler
Q_Learning/train/: current_model_obs.json  current_model_state.json  model_statistics_obs.json  model_statistics_state.json
Rules_Based/: rule_based_ai.py  rule_based_ai_faster copy.py  rule_based_ai_faster.py
(+11 files in other folders)
