[tool.poetry]
name = "super-mario-ai"
version = "0.1.0"
description = ""
authors = ["Quang Khanh Hua (Henry) <henry@khanhhua2102.com>"]
readme = "README.md"
packages = [{include = "super_mario_ai"}]

[tool.poetry.dependencies]
python = "^3.8"
gym-super-mario-bros = "^7.4.0"
stable-baselines3 = "^2.0.0"
shimmy = "^1.2.1"
opencv-python = "^4.8.0.76"
ipykernel = "^6.25.1"
pyautogui = "^0.9.54"
pillow = "^10.0.0"
scikit-image = "^0.21.0"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
